--- a/QuickStartApp/AndroidManifest.xml
+++ b/QuickStartApp/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:targetSdkVersion="17" />
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    
     
     <application
         android:allowBackup="true"
