Fixed class path error

--- a/JavaDesktopApp/.classpath
+++ b/JavaDesktopApp/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="libs/sdkresources.jar"/>
 	<classpathentry kind="lib" path="libs/tablelayout.jar"/>
 	<classpathentry kind="lib" path="libs/huelocalsdk.jar"/>
+	<classpathentry kind="lib" path="libs/huesdkresources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
