--- a/JavaDesktopApp/.project
+++ b/JavaDesktopApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java-DesktopApp</name>
+	<name>Java-DesktopApp - PUBLIC</name>
 	<comment></comment>
 	<projects>
 	</projects>
